--- a/WebShop.IdentityServer/Views/Shared/_Confirmation.cshtml
+++ b/WebShop.IdentityServer/Views/Shared/_Confirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.ErrorTitle = "Error";
+    ViewBag.Title = "";
     Layout = "_Layout";
 }
 
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <h1>@ViewBag.ErrorTitle</h1>
-    <h3 style="margin-top: 30px;">@ViewBag.Error</h3>
+    <h3 style="margin-top: 30px;">@ViewBag.Message</h3>
 </body>
 </html>
