--- a/WebShop.IdentityServer/wwwroot/css/layout.css
+++ b/WebShop.IdentityServer/wwwroot/css/layout.css
@@ -58,9 +58,12 @@ body {
 }
 
 .container {
-    margin-top: 0;
-    margin-left: 57px;
-    margin-right: 57px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+@media max-width {
+
 }
 
 
