--- a/WebShop/ClientApp/src/app/app.component.html
+++ b/WebShop/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
   <app-nav-menu></app-nav-menu>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
+  <a [routerLink]="['/products']">Products</a> |
+  <a [routerLink]="['/cart']">Cart</a>
+  <br><br>
+  <router-outlet></router-outlet>
 </body>
