--- a/WebShop.IdentityServer/Views/Shared/_Layout.cshtml
+++ b/WebShop.IdentityServer/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 
 <div class="section">
     <div class="container">
-        <a href="#" class="field web-shop-kz">
+        <a href="http://localhost:4200" class="field web-shop-kz">
                 WebShopKZ
             </a>
             @RenderBody()
