--- a/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,3 +1,34 @@
 <header>
-    nav-menu
+  <div class="container">
+    <div class="header__body">
+      <div class="header__row">
+        <div class="header__contacts">
+          <div class="header__contact">
+            <i class="fas fa-phone-square"></i>
+            +7 (708) 999 99 99
+          </div>
+          <div class="header__contact">
+            <i class="far fa-envelope"></i>
+            WebShopKz@sobaka.kz
+          </div>
+        </div>
+        <div class="header__nav">
+          <div *ngIf="!isAuthenticated" class="header__auth auth">
+            <i class="fas fa-user auth__icon"></i>
+            <nav class="auth__list">
+              <a href="#" (click)="login()">Войти</a> |
+              <a href="#" (click)="register()">Регистрация</a>
+            </nav>
+          </div>
+          <div *ngIf="isAuthenticated" class="header__user user">
+            <div class="user__avatar">
+              <img src="{{userAvatarPath}}" alt="avatar">
+            </div>
+            <div class="user__name">Folsets</div>
+          </div>
+          <button (click)="pizdec()">Pizdec</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
