--- a/Angular/webshop-app/src/app/products/product-list/product-list.component.html
+++ b/Angular/webshop-app/src/app/products/product-list/product-list.component.html
@@ -1,1 +1,9 @@
-<p>product-list works!</p>
+<div class="product-list">
+  <div class="container">
+    <div class="product-list__row">
+      <div *ngFor="let product of products" class="product-list__item">
+        <app-product-item [product]="product"></app-product-item>
+      </div>
+    </div>
+  </div>
+</div>
